--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -162,11 +162,11 @@ Then, there is a transition from the ballistic regime to the pseudo-diffusional 
 \caption{ Plots of the MSD at the last two timescales considered in Figure~\ref{fgr:MSD_init}. On the left, the timescale between \SI{0.01}{\ns} and \SI{0.4}{\ns} is considered, the MSD is fitted by a power function with the same exponent as one determined earlier, and a linear fit is given to show the incompatibility with the diffusion equation. On the right, we have the same approach but for the timescale between \SI{0.4}{\ns} and \SI{9}{\ns}. }\label{fgr:MSD_linear_init}
 \end{figure}
 
-If we use the right plot of Figure~\ref{fgr:MSD_linear_init} to fit a linear relation and deduct the diffusion coefficient, we can have an underestimated value of the diffusion coefficient of $2.24\times 10^{-8}$~\si{\square\cm\per\s} --- it is an underestimation because the MSD is rather concave, which reduces the slope in the fitting process. This value is already a good estimation of the diffusion coefficient considering the rather high exponent $\alpha$ value in the with regard to $K_\alpha\tau^\alpha$.
+If we use the right plot of Figure~\ref{fgr:MSD_linear_init} to fit a linear relation and deduct the diffusion coefficient, we can have an underestimated value of the diffusion coefficient of $2.24\,10^{-8}$~\si{\square\cm\per\s} --- it is an underestimation because the MSD is rather concave, which reduces the slope in the fitting process. This value is already a good estimation of the diffusion coefficient considering the rather high exponent $\alpha$ value in the with regard to $K_\alpha\tau^\alpha$.
 
-Since there is an element of randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), we need to measure the effect of running different MD simulations of the value of the diffusion coefficients. To measure this uncertainty across different MD simulations with different initial positions determined by with different random seed. In RASPA2, the random seed is simply equal to the UNIX time upon launching the MD simulation. This ensures that a different random seed is given to the $10$ different MD simulations we launched using the exact same parameters as mentioned previously. I found that the average diffusion coefficient value equals $2.13\times 10^{-8}$~\si{\square\cm\per\s} and the standard deviation equals $0.37\times 10^{-8}$~\si{\square\cm\per\s}, which represents about {17\%} of the average value. We could estimate the uncertainty to about {17\%} on the diffusion coefficient for a rather low coefficient around $10^{-8}$~\si{\square\cm\per\s}, we could expect lower uncertainty for less obstructing materials. 
+Since there is an element of randomness in the initial position of xenon (block pockets have been calculated for a \SI{1.5}{\angstrom}-radius probe), we need to measure the effect of running different MD simulations of the value of the diffusion coefficients. To measure this uncertainty across different MD simulations with different initial positions determined by with different random seed. In RASPA2, the random seed is simply equal to the UNIX time upon launching the MD simulation. This ensures that a different random seed is given to the $10$ different MD simulations we launched using the exact same parameters as mentioned previously. I found that the average diffusion coefficient value equals $2.13\,10^{-8}$~\si{\square\cm\per\s} and the standard deviation equals $0.37\,10^{-8}$~\si{\square\cm\per\s}, which represents about {17\%} of the average value. We could estimate the uncertainty to about {17\%} on the diffusion coefficient for a rather low coefficient around $10^{-8}$~\si{\square\cm\per\s}, we could expect lower uncertainty for less obstructing materials. 
 
-Now that I have more confidence on the method, I will try to probe higher timescales than the one accessible with an MD time step of \SI{1}{\fs}, because the diffusion regime seems to be occurring rather at the \SI{10}{\ns} timescale. I ran a first calculation with 500 million steps to validate the diffusion coefficient value. The time window between \SI{2}{\ns} and \SI{47}{\ns}, and the MSD are calculated from about 200 sampled trajectories, which gives rather correct values. We can obtain a more accurate diffusion coefficient of $2.6\times 10^{-8}$~\si{\square\cm\per\s}, which is very close to the one obtained in the previous approach. The value is slightly higher (which is expected) since the previous values was over-estimated. This approach is therefore consistent with the previous one.
+Now that I have more confidence on the method, I will try to probe higher timescales than the one accessible with an MD time step of \SI{1}{\fs}, because the diffusion regime seems to be occurring rather at the \SI{10}{\ns} timescale. I ran a first calculation with 500 million steps to validate the diffusion coefficient value. The time window between \SI{2}{\ns} and \SI{47}{\ns}, and the MSD are calculated from about 200 sampled trajectories, which gives rather correct values. We can obtain a more accurate diffusion coefficient of $2.6\,10^{-8}$~\si{\square\cm\per\s}, which is very close to the one obtained in the previous approach. The value is slightly higher (which is expected) since the previous values was over-estimated. This approach is therefore consistent with the previous one.
 
 \begin{figure}[ht]
   \centering
@@ -192,7 +192,7 @@ This approach only probes the linear relations between the MSD and time to deter
 
 In this section, I will present the different relations the diffusion coefficient may or may not have with the geometrical descriptors. I decided to use a forcefield-dependent definition of the radii so that it better correlates with the results of the MD simulation that uses the UFF forcefield. The different geometrical descriptors are then calculated using Zeo++ and these radii to calculate the PLD, the largest sphere diameter D$_{if}$ along a free path, the surface area and the pore volume, as already explained in the chapter 2. To further justify the use of the UFF-based radii, the original paper~\cite{Hung_2021} showed the better correlation of the PLD to the diffusion constant, and we can also see it from the Figure~\ref{fgr:diff_pld}. The PLD calculated by the standard CCDC defined atom radii does not fit the diffusion coefficient as well as the UFF-defined PLD. As shown in a smaller scale in the article~\cite{Haldoupis_2010} (Figure~\ref{fgr:Haldoupis_2010} in the chapter 1), there is a linear relation between the diffusion activation energy (logarithmic transform of the diffusion coefficient) and the PLD, and this linear relation is much more noisy for the PLD defined by the standard CCDC radii than for the UFF-based PLD.
 
-Beyond the practical considerations on the geometrical descriptor calculations, the PLD explains the outlines of the variation of diffusion performance inside a nanoporous material. First there is a linear relationship that was previously highlighted, and then there is a sort of noisy plateau. In the first zone, the xenon is constrained by channels narrower than its kinetic radius. The wider the channel the higher the diffusion coefficient is, and this positive correlation persists until the channel is wider than about \SI{4.6}{\angstrom}. After this threshold, the diffusion coefficient is rather stable around $3\times 10^{-4}$~\si{\square\cm\per\s}, and the variations can only be explained by other phenomena such as the tortuosity inside nanopores or chemical nature of the surface of the nanopores. This value of diffusion coefficient can be interpreted as the diffusion coefficient of a ``free'' xenon that is less affected by the surrounding pore surface. The channels are large enough so that the xenon is only a little slowed down, for values of the PLD over \SI{5}{\angstrom}. These results are compatible with experimental data that measured the diffusion coefficient of xenon dissolved in water at different temperature conditions, and found a value of $10^{-5}$~\si{\square\cm\per\s} at \SI{303}{\kelvin},\autocite{Wise1968} which is consistent with values centered around $3\times 10^{-4}$~\si{\square\cm\per\s} at the plateau.
+Beyond the practical considerations on the geometrical descriptor calculations, the PLD explains the outlines of the variation of diffusion performance inside a nanoporous material. First there is a linear relationship that was previously highlighted, and then there is a sort of noisy plateau. In the first zone, the xenon is constrained by channels narrower than its kinetic radius. The wider the channel the higher the diffusion coefficient is, and this positive correlation persists until the channel is wider than about \SI{4.6}{\angstrom}. After this threshold, the diffusion coefficient is rather stable around $3\,10^{-4}$~\si{\square\cm\per\s}, and the variations can only be explained by other phenomena such as the tortuosity inside nanopores or chemical nature of the surface of the nanopores. This value of diffusion coefficient can be interpreted as the diffusion coefficient of a ``free'' xenon that is less affected by the surrounding pore surface. The channels are large enough so that the xenon is only a little slowed down, for values of the PLD over \SI{5}{\angstrom}. These results are compatible with experimental data that measured the diffusion coefficient of xenon dissolved in water at different temperature conditions, and found a value of $10^{-5}$~\si{\square\cm\per\s} at \SI{303}{\kelvin},\autocite{Wise1968} which is consistent with values centered around $3\,10^{-4}$~\si{\square\cm\per\s} at the plateau.
 
 \begin{figure}[ht]
   \centering
@@ -211,7 +211,7 @@ If I now analyze the channel dimensions (determined using Zeo++) that could part
     \caption{ Distributions of the base-10 logarithm of the diffusion coefficients of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channel, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:scatter_diffusion_chandim}
 \end{figure}
 
-For this reason, I plotted in Figure~\ref{fgr:hist_diffusion_chandim} the distribution of diffusion coefficients that depends on the dimensionality of the channels within the framework. The distribution for structures containing 1D structures is much more heavy tail in terms of low diffusion coefficients. We can more easily find 1D structures with very low diffusion coefficients under $3\times 10^{-8}$~\si{\square\cm\per\s}. The vast majority of structures with tridimensional channels has a rather higher diffusion coefficient between $3\times 10^{-6}$~\si{\square\cm\per\s} and $10^{-4}$~\si{\square\cm\per\s} with almost no structures with lower diffusion coefficients. This is not as blatant for bi- and unidimensional channels, we can more easily find structures between $3\times 10^{-8}$~\si{\square\cm\per\s} and $3\times 10^{-6}$~\si{\square\cm\per\s}, even if theory are not that frequent. The dimensionality of the channels can therefore influence the values of diffusion coefficient, but the relation is not as clear as for PLD.
+For this reason, I plotted in Figure~\ref{fgr:hist_diffusion_chandim} the distribution of diffusion coefficients that depends on the dimensionality of the channels within the framework. The distribution for structures containing 1D structures is much more heavy tail in terms of low diffusion coefficients. We can more easily find 1D structures with very low diffusion coefficients under $3\,10^{-8}$~\si{\square\cm\per\s}. The vast majority of structures with tridimensional channels has a rather higher diffusion coefficient between $3\,10^{-6}$~\si{\square\cm\per\s} and $10^{-4}$~\si{\square\cm\per\s} with almost no structures with lower diffusion coefficients. This is not as blatant for bi- and unidimensional channels, we can more easily find structures between $3\,10^{-8}$~\si{\square\cm\per\s} and $3\,10^{-6}$~\si{\square\cm\per\s}, even if theory are not that frequent. The dimensionality of the channels can therefore influence the values of diffusion coefficient, but the relation is not as clear as for PLD.
 
 \begin{figure}[ht]
   \centering
@@ -221,7 +221,7 @@ For this reason, I plotted in Figure~\ref{fgr:hist_diffusion_chandim} the distri
     \caption{ Distributions of diffusion coefficient of three different subsets of the screened structures. The first one (a) is composed of structures with a unidimensional channel, the second (b) bidimensional channels and the third one (c) tridimensional channels. }\label{fgr:hist_diffusion_chandim}
 \end{figure}
 
-Other geometrical properties of the material that can influence the diffusion is the void fraction and surface area. The low diffusion coefficients usually happen in materials with small pore volumes below $0.6$ as shown in Figure~\ref{fgr:diff_sa_vf}. However, it is difficult to draw a relationship between the void fraction and the diffusion coefficient. The only relation is that materials with void fraction higher than $0.6$ have a diffusion coefficient over $3\times 10^{-6}$~\si{\square\cm\per\s}. This phenomenon is certainly due to the correlation between the PLD and the void fraction. Large PLD values are usually associated with large values of the void fraction. On the other hand, the accessible surface area for a probe of size $1.2$~\si{\angstrom} does not seem to influence the diffusion coefficient at all. 
+Other geometrical properties of the material that can influence the diffusion is the void fraction and surface area. The low diffusion coefficients usually happen in materials with small pore volumes below $0.6$ as shown in Figure~\ref{fgr:diff_sa_vf}. However, it is difficult to draw a relationship between the void fraction and the diffusion coefficient. The only relation is that materials with void fraction higher than $0.6$ have a diffusion coefficient over $3\,10^{-6}$~\si{\square\cm\per\s}. This phenomenon is certainly due to the correlation between the PLD and the void fraction. Large PLD values are usually associated with large values of the void fraction. On the other hand, the accessible surface area for a probe of size $1.2$~\si{\angstrom} does not seem to influence the diffusion coefficient at all. 
 
 \begin{figure}[ht]
   \centering
