--- a/cover.tex
+++ b/cover.tex
@@ -10,8 +10,8 @@
 
 \jurymember{1}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Présidente du jury}
 \jurymember{2}{Sof{\'{i}}a \textsc{Calero}}{Professeure, Eindhoven University of Technology}{Rapportrice}
-\jurymember{3}{Magali \textsc{Benoit}}{Directrice de Recherche, Université de Toulouse}{Rapportrice}
-\jurymember{4}{Johann \textsc{William}}{Responsable modélisation et IA, Orano }{Membre invité}
+\jurymember{3}{Christelle \textsc{Miqueu}}{Maître de Conférences, Université de Pau \& Pays Adour}{Rapportrice}
+\jurymember{4}{Johann \textsc{William}}{Responsable modélisation et IA, Orano}{Membre invité}
 % \jurymember{5}{Isabelle \textsc{Hablot}}{Manager recherche et développement, Orano}{Représentante industrielle}
 \jurymember{6}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Encadrant thèse}
 \jurymember{7}{François-Xavier \textsc{Coudert}}{Directeur de Recherche, Chimie ParisTech}{Directeur de thèse}
