--- a/cover.tex
+++ b/cover.tex
@@ -1,5 +1,5 @@
 %!TEX root = main.tex
-% Nicolas Castel PhD thesis -- (C) 2023
+% Emmanuel Ren PhD thesis -- (C) 2023
 
 % information for cover pages
 
@@ -12,23 +12,22 @@
 \jurymember{2}{Sof{\'{i}}a \textsc{Calero}}{Professeure, Eindhoven University of Technology}{Rapportrice}
 \jurymember{3}{Christelle \textsc{Miqueu}}{Maître de Conférences, Université de Pau \& Pays Adour}{Rapportrice}
 \jurymember{4}{Johann \textsc{William}}{Responsable modélisation et IA, Orano}{Membre invité}
-% \jurymember{5}{Isabelle \textsc{Hablot}}{Manager recherche et développement, Orano}{Représentante industrielle}
+\jurymember{5}{Isabelle \textsc{Hablot}}{Manager recherche et développement, Orano}{Membre invité}
 \jurymember{6}{Philippe \textsc{Guilbaud}}{Chef de laboratoire et Directeur de Recherche, CEA}{Encadrant thèse}
 \jurymember{7}{François-Xavier \textsc{Coudert}}{Directeur de Recherche, Chimie ParisTech}{Directeur de thèse}
 
 \frabstract{
 
-Cette thèse vise à améliorer la séparation des gaz xénon et krypton en utilisant des matériaux nanoporeux. je développe des outils de description microscopique de ces matériaux, en utilisant différents niveaux de modélisation moléculaire. J'intègre des approches de criblage à haut débit et d'apprentissage statistique en exploitant des bases de données de matériaux pour évaluer rapidement leurs performances. 
-\todo{Pour cela thermo, transport, etc.}
-Ces travaux contribuent à la recherche de solutions plus efficaces et durables pour la séparation de gaz dans diverses industries.
+Cette thèse se concentre sur l'amélioration de la séparation xénon/krypton en utilisant des matériaux nanoporeux. L'objectif est de développer des outils de description microscopique de ces matériaux en utilisant différents niveaux de modélisation moléculaire. Pour en évaluer rapidement les performances, des approches de criblage à haut débit et d'apprentissage statistique sont déployées en exploitant les bases de données existantes de matériaux nanoporeux. L'étude se concentre principalement sur la sélectivité Xe/Kr en utilisant des grandeurs thermodynamiques pertinents. Outre la sélectivité, d'autres propriétés importantes pour le procédé industriel de séparation de gaz, telles que la capacité d'adsorption et la vitesse de diffusion à l'intérieur des nanopores, sont également étudiées. Ces travaux de rechercher contribuent à explorer des solutions plus efficaces et durables pour séparer efficacement des mélanges de gaz dans diverses industries.
+
 }
 
 \enabstract{
 
-This thesis aims to improve the separation of xenon and krypton gases using nanoporous materials. I am developing tools for the microscopic description of these materials, using various levels of molecular modeling. I integrate high-throughput screening approaches and statistical learning by leveraging material databases to rapidly evaluate their performance. These efforts contribute to the search for more efficient and sustainable solutions for gas separation in various industries.
+This thesis aims to improve the xenon/krypton separation using nanoporous materials. The primary objective is to develop microscopic characterization tools employing diverse levels of molecular modeling. High-throughput screening and statistical learning approaches are utilized, leveraging material databases to quickly assess their performances. Specifically, the Xe/Kr selectivity is investigated through a thermodynamically driven approach. Beyond selectivity, other relevant properties for gas separation, such as adsorption capacity and, more specifically, diffusion rates within nanopores, are studied. These research efforts contribute to the exploration of more efficient and sustainable solutions for gas separation in various industries.
 
 }
 
 \frkeywords{simulation moléculaire, séparation de gaz, adsorption, matériaux nanoporeux, \\\\ criblage haut-débit, apprentissage statistique}
 
-\enkeywords{molecular simulation, gas separation, adsorption, nanoposrous materials, \\\\high-throughput screening , machine learning}
+\enkeywords{molecular simulation, gas separation, adsorption, nanoporous materials, \\\\high-throughput screening , machine learning}
