--- a/4-ml.tex
+++ b/4-ml.tex
@@ -296,7 +296,7 @@ Before delving into the model of this work, the different literature contributio
 
 While the aforementioned approaches demonstrate good accuracy in predicting low-pressure adsorption (i.e., in the limit of zero loading), they are not suitable for predicting adsorption in the high-pressure regime when the material is near saturation uptake. Grand Canonical Monte Carlo (GCMC) simulations are commonly employed for this task, but there is a lack of methods for decreasing computational costs for high-throughput screening. The challenge this thesis aims to address is predicting selectivity in the nanopores of a material at high pressure, where adsorbates interact with each other, while having access to information only on the interaction at infinite dilution. Comparing the low- and high-pressure cases provides key information on the origin of selectivity differences. Previous studies have shown that selectivity can decrease between the low and ambient pressure cases in Xe/Kr separation applications (see chapters 2 and 3), primarily due to the presence of different pore sizes and potential reorganizations caused by adsorbate--adsorbate interactions.
 
-By combining grid-based descriptors described in the previous chapter (section~\ref{sct:grid}) with statistical characterizations of pore size, a set of ML descriptors suitable for rapid and accurate ambient-pressure selectivity prediction was proposed. These descriptors were used in an optimized XGBoost model, showcasing its performance in the case of xenon/krypton separation in the CoRE MOF 2019 database\autocite{Chung_2019}.
+By combining grid-based descriptors described in the previous chapter (section~\ref{sct:grid}) with statistical characterizations of pore size, a set of ML descriptors suitable for rapid and accurate ambient-pressure selectivity prediction was proposed. These descriptors were used in an optimized XGBoost model, showcasing its performance in the case of xenon/krypton separation in the CoRE MOF 2019 database\autocite{Chung_2019}. The study presented in the following is in the process of being published, and a preprint is avaible on \emph{Chem. rXiv} in Ref.~\cite{Ren_2023_ml}.\footnote[1]{The corresponding data and scripts can be found at: \url{} \todo{create a repo github with the different models and data}}
 
 \subsection{Data Preparation}
 
@@ -312,7 +312,7 @@ To achieve this, a logarithmic transform of the selectivity will be considered i
 
 \subsubsection{Database and data generation}
 
-This methodology is tested on a set of realistic MOFs by considering the 12\,020 all-solvent removed (ASR) structures of the CoRE MOF 2019 database\autocite{Chung_2019}. After removing the disordered and the non-MOF structures as well as the ones with a large unit cell volume of \SI{20}{\cubic\nano\meter}, the database is reduced to a set of 9,748 structures. Then, with the string information given by the Zeo++ software\autocite{zeopp_Willems2012} this number is reduced to 9\,177 by removing the structures that are not tridimensional, where solvents are still detected (wrongly classified in ``all solvent removed’’), or where the metal is radioactive or fissile (e.g., Pu-MOF \texttt{TAGCIP}\autocite{Diwu_2010}, Np-MOF \texttt{KASHUK}\autocite{Martin_2017}, U-MOF \texttt{ABETAE}\autocite{Jouffret_2011} or Th-MOF \texttt{ASAMUE}\autocite{Liang_2016}) --- this can be a source of risks in a nuclear waste processing plant. Furthermore, a condition on the largest cavity diameter (LCD) is added to keep only the structures with pore sizes allowing the adsorption of xenon: this is the case for 8\,529 structures with an LCD higher than \SI{4}{\angstrom} (approximately the size of a xenon molecule). This is equivalent to removing the structures with very unfavorable adsorption enthalpies, that are not promising for our adsorption-based separation.
+This methodology is tested on a set of realistic MOFs by considering the 12\,020 all-solvent removed (ASR) structures of the CoRE MOF 2019 database\autocite{Chung_2019}. After removing the disordered and the non-MOF structures as well as the ones with a large unit cell volume of \SI{20}{\cubic\nano\meter}, the database is reduced to a set of 9,748 structures. Then, with the string information given by the Zeo++ software\autocite{zeopp_Willems2012} this number is reduced to 9\,177 by removing the structures that are not tridimensional, where solvents are still detected (wrongly classified in ``all solvent removed''), or where the metal is radioactive or fissile (e.g., Pu-MOF \texttt{TAGCIP}\autocite{Diwu_2010}, Np-MOF \texttt{KASHUK}\autocite{Martin_2017}, U-MOF \texttt{ABETAE}\autocite{Jouffret_2011} or Th-MOF \texttt{ASAMUE}\autocite{Liang_2016}) --- this can be a source of risks in a nuclear waste processing plant. Furthermore, a condition on the largest cavity diameter (LCD) is added to keep only the structures with pore sizes allowing the adsorption of xenon: this is the case for 8\,529 structures with an LCD higher than \SI{4}{\angstrom} (approximately the size of a xenon molecule). This is equivalent to removing the structures with very unfavorable adsorption enthalpies, that are not promising for our adsorption-based separation.
 
 Then, the descriptors summarized below (and fully detailed in Supporting Information) were calculated on this restrained dataset. At this stage, 370 structures failed to be calculated in GCMC\todo{change} and 82 have a zero value for the standard deviation of the pore distribution (skewness and kurtosis go to infinite and cannot be defined). A final dataset of 8,077 structures was therefore used to perform our ML-assisted method of screening the Xe/Kr adsorption selectivity. Based on this final set, {20\%} were randomly used for the test set and {80\%} were used to train our model. The goal is to learn from the training set a relationship between the descriptors and the target ambient-pressure selectivity in order to evaluate the performance on the test set. A CSV file of training and test sets can be found in the data availability section.
 
@@ -614,8 +614,6 @@ The second structure \texttt{BIMDIL} is also among the most selective with a sel
 
 %% conclusions + sum-up of some qualitative rules
 These two examples provide a deeper understanding of how the model distinguishes structures that lose selectivity at higher pressure from those that do not. Most dependence plots exhibit a strong association between descriptors and their effects, with outliers being rare enough to comprehend the internal logic of the model. As previously discussed, the first three descriptors establish a baseline for the observed selectivity drop with limited information. Subsequently, the contributions of other descriptors can be positive, negligible, or negative depending on the domain where the values of the descriptor lie. For instance, the average pore size and largest cavity diameter need to be within specific ranges to maximize the likelihood of maintaining selectivity at higher pressure, aligning with previous studies emphasizing the importance of pore sizes similar to xenon for Xe/Kr separation. The difference in entropy between ambient temperature and \SI{900}{\kelvin} is a surprising descriptor that separates selective structures based on whether its value falls within a specified range. Similarly, the difference in void fraction occupied by xenon and krypton is intriguing as it impacts selectivity differently depending on whether the structure is highly selective or not, with the contribution being more or less proportional to its value. Various methods of measuring the disparity of the PSD and interaction energy distribution play a key role in identifying highly selective structures (indicated in blue on the dependence plot in Figure~\ref{fgr:pdp_selection}) that either maintain or decrease in selectivity. These methods include calculating the difference between the average pore size and the LCD, as well as the standard deviation of the PSD or Boltzmann-weighted energy distribution, which exhibit distinct behaviors based on the domain in which the value lies. The SHAP dependence plots provide valuable insights into the mechanisms underlying the ML model presented in this thesis and, more broadly, shed light on the understanding of Xe/Kr separation origins.
-
-\textbf{Data Availability:} \url{} \todo{create a repo github with the different models and data}
 
 \section{Beyond thermodynamic considerations}
 
