--- a/cover.tex
+++ b/cover.tex
@@ -6,7 +6,7 @@
 \institute{Chimie ParisTech}
 \doctoralschool{Chimie Physique et\\ Chimie Analytique de\\ Paris Centre}{388}
 \specialty{Chimie Physique}
-\date{XX Septembre 2023}
+\date{26 Septembre 2023}
 
 \jurymember{1}{NAME \textsc{SURNAME}}{TITLE, PLACE/University}{Présidente du jury}
 \jurymember{2}{Sof{\'{i}}a \textsc{Calero}}{Professeure, Eindhoven University of Technology}{Rapportrice}
