--- a/psl-cover.sty
+++ b/psl-cover.sty
@@ -282,7 +282,7 @@
 
       %% PSL institute logo
       \node[xshift=-56mm, yshift=-120mm] at (o) {
-        \includegraphics[width=0.4\textwidth]{\@pslassetspath/logo-institute.pdf}
+        \includegraphics[width=0.4\textwidth]{\@pslassetspath/logo_chimie_fond_transparent.png}
       };
       % \node[xshift=0mm, yshift=-124mm] at (o) {
       %   \includegraphics[height=2.3cm]{\@pslassetspath/logo-cea}
