--- a/Z-resume-fr.tex
+++ b/Z-resume-fr.tex
@@ -136,7 +136,7 @@ Enfin, en comparant les rapports des coefficients de diffusion du xénon et du k
 
 Cette thèse étudie ainsi les grandeurs thermodynamiques et cinétiques de la séparation xénon/krypton dans les matériaux nanoporeux. On a pu caractériser de manière plus fine les caractéristiques des matériaux les plus sélectifs. En ajoutant des contraintes sur la diffusibilité, différents types de matériaux ont été identifiés. 
 
-La prise en compte de phénomènes physiques non inclus dans les études de cette thèse ouvre des perspectives pour de nombreux travaux sur ce sujet. En effet, de nouveaux travaux expérimentaux montrent l'importance de la prise en compte de la polarisation. Le matériau le plus sélectif à ce jour pour la séparation xénon/krypton se base sur l'interaction induite par des métaux non coordinés.\autocite{Pei_2022} Enfin, la flexibilité du matériau est également importante à prendre en compte. Dans certains cas, la flexibilité permet même de mieux comprendre l'incohérence entre les résultats expérimentaux et théoriques. De nombreuses pistes peuvent être explorées pour intégrer ces effets dans un criblage dans le futur.\autocite{Lachet_1998,Witman_2017}
+La prise en compte de phénomènes physiques non inclus dans les études de cette thèse ouvre des perspectives pour de nombreux travaux sur ce sujet. En effet, de nouveaux travaux expérimentaux montrent l'importance de la prise en compte de la polarisation. Le matériau le plus sélectif à ce jour pour la séparation xénon/krypton se base sur l'interaction induite par des métaux non coordinés.\autocite{Pei_2022} Enfin, la flexibilité du matériau est également importante à prendre en compte. Dans certains cas, la flexibilité permet même de mieux comprendre l'incohérence entre les résultats expérimentaux et théoriques. De nombreuses pistes peuvent être explorées pour intégrer à l'avenir ces effets dans un criblage.\autocite{Lachet_1998,Witman_2017}
 
 \vfill
 \begin{center}
