--- a/cover.tex
+++ b/cover.tex
@@ -18,7 +18,7 @@
 
 \frabstract{
 
-Cette thèse se concentre sur l'amélioration de la séparation xénon/krypton en utilisant des matériaux nanoporeux. L'objectif est de développer des outils de description microscopique de ces matériaux en utilisant différents niveaux de modélisation moléculaire. Pour en évaluer rapidement les performances, des approches de criblage à haut débit et d'apprentissage statistique sont déployées en exploitant les bases de données existantes de matériaux nanoporeux. L'étude se concentre principalement sur la sélectivité Xe/Kr en utilisant des grandeurs thermodynamiques pertinents. Outre la sélectivité, d'autres propriétés importantes pour le procédé industriel de séparation de gaz, telles que la capacité d'adsorption et la vitesse de diffusion à l'intérieur des nanopores, sont également étudiées. Ces travaux de rechercher contribuent à explorer des solutions plus efficaces et durables pour séparer efficacement des mélanges de gaz dans diverses industries.
+Cette thèse se concentre sur l'amélioration de la séparation xénon/krypton en utilisant des matériaux nanoporeux. L'objectif est de développer des outils de description microscopique de ces matériaux en utilisant différents niveaux de modélisation moléculaire. Pour en évaluer rapidement les performances, des approches de criblage à haut débit et d'apprentissage statistique sont déployées en exploitant les bases de données existantes de matériaux nanoporeux. L'étude se concentre principalement sur la sélectivité Xe/Kr en utilisant des grandeurs thermodynamiques pertinents. Outre la sélectivité, d'autres propriétés importantes pour le procédé industriel de séparation de gaz, telles que la capacité d'adsorption et la vitesse de diffusion à l'intérieur des nanopores, sont également étudiées. Ces travaux de recherche contribuent à explorer des solutions plus efficaces et durables pour séparer efficacement des mélanges de gaz dans diverses industries.
 
 }
 
